[gd_scene load_steps=5 format=3 uid="uid://cpgq7y3rd6f30"]

[ext_resource type="Script" uid="uid://dftpmfgagkclx" path="res://scripts/lobby.gd" id="1_o1atq"]
[ext_resource type="Texture2D" uid="uid://bygd1wesyrfvl" path="res://images/spacegliders.png" id="2_5gu6x"]
[ext_resource type="Shader" uid="uid://dx5y7casosjwb" path="res://shaders/recolor.tres" id="2_q60fs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q60fs"]
shader = ExtResource("2_q60fs")
shader_parameter/Shift = null

[node name="Lobby" type="PanelContainer"]
offset_right = 405.0
offset_bottom = 90.0
script = ExtResource("1_o1atq")

[node name="Setup" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Setup"]
layout_mode = 2

[node name="Nickname" type="LineEdit" parent="Setup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Your nickname..."
max_length = 25

[node name="Game" type="HBoxContainer" parent="Setup/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Setup/VBoxContainer/Game"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IPAddres" type="LineEdit" parent="Setup/VBoxContainer/Game/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter server address..."

[node name="ConnectButton" type="Button" parent="Setup/VBoxContainer/Game/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Connect"

[node name="HostButton" type="Button" parent="Setup/VBoxContainer/Game"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Host server
"

[node name="HBoxContainer" type="HBoxContainer" parent="Setup/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="SubViewportContainer" parent="Setup/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Setup/VBoxContainer/HBoxContainer/TextureRect"]
handle_input_locally = false
size = Vector2i(128, 128)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="GliderSprite" type="Sprite2D" parent="Setup/VBoxContainer/HBoxContainer/TextureRect/SubViewport"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_q60fs")
texture = ExtResource("2_5gu6x")
region_enabled = true
region_rect = Rect2(5, 49, 38, 46)

[node name="Camera2D" type="Camera2D" parent="Setup/VBoxContainer/HBoxContainer/TextureRect/SubViewport"]

[node name="VBoxContainer" type="VBoxContainer" parent="Setup/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Setup/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="GlidersList" type="OptionButton" parent="Setup/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
fit_to_longest_item = false
allow_reselect = true

[node name="ColorSlider" type="HSlider" parent="Setup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="PlayersList" type="MarginContainer" parent="."]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PlayersList"]
layout_mode = 2

[node name="PlayersList" type="ItemList" parent="PlayersList/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_search = false
auto_height = true
item_count = 2
item_0/text = "Player1"
item_1/text = "Player2"

[node name="HBoxContainer" type="HBoxContainer" parent="PlayersList/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="KickButton" type="Button" parent="PlayersList/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Kick"

[node name="StartButton" type="Button" parent="PlayersList/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Start
"

[connection signal="text_changed" from="Setup/VBoxContainer/Nickname" to="." method="_on_nickname_text_changed"]
[connection signal="pressed" from="Setup/VBoxContainer/Game/VBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="Setup/VBoxContainer/Game/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="item_selected" from="Setup/VBoxContainer/HBoxContainer/VBoxContainer/GlidersList" to="." method="_on_gliders_list_item_selected"]
[connection signal="value_changed" from="Setup/VBoxContainer/ColorSlider" to="." method="_on_color_slider_value_changed"]
[connection signal="pressed" from="PlayersList/VBoxContainer/HBoxContainer/KickButton" to="." method="_on_kick_button_pressed"]
[connection signal="pressed" from="PlayersList/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
